# ZOO-Project-initial

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-GTEST  Dockerfile-MOZJS  Dockerfile-test  MOZJS.patch  README.md  TESTING.md  docker-compose.yml  main.cfg  myresult.xml  nuxt-client.tar.bz2
cmake/modules/: FindFcgi.cmake
docker/dru/: Dockerfile
docker/nuxt-client/: docker-compose.yml
docs/_build/doctrees/: environment.pickle  index.doctree  intro.doctree
docs/_build/doctrees/api/: classes.doctree  examples.doctree  howto.doctree  index.doctree  what.doctree  zoo-format-wps.doctree  zoo-process.doctree  zoo-request.doctree  zoo.doctree
docs/_build/doctrees/client/: example.doctree  howto.doctree  index.doctree  what.doctree
docs/_build/doctrees/contribute/: code.doctree  contributors.doctree  dev.doctree  doc.doctree  howto.doctree  index.doctree  release.doctree  service_providers.doctree  translate.doctree
docs/_build/doctrees/install/: centos.doctree  debian.doctree  docker.doctree  download.doctree  index.doctree  installation.doctree  opensuse.doctree  prerequisites.doctree  windows.doctree
docs/_build/doctrees/kernel/: configuration.doctree  dru.doctree  hpc.doctree  index.doctree  mapserver.doctree  orfeotoolbox.doctree  sagagis.doctree  what.doctree
docs/_build/doctrees/services/: debug.doctree  howtos.doctree  index.doctree  process-profiles.doctree  status.doctree  translation.doctree  what.doctree  zcfg-reference.doctree  zoo-services.doctree
docs/_build/html/: genindex.html  index.html  intro.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/api/: classes.rst.txt
docs/_build/html/_sources/kernel/: mapserver.rst.txt
docs/_build/html/_sources/services/: zcfg-reference.rst.txt  zoo-services.rst.txt
docs/_build/html/api/: classes.html  examples.html  howto.html  index.html  what.html  zoo-format-wps.html  zoo-process.html  zoo-request.html  zoo.html
docs/_build/html/client/: example.html  howto.html  index.html  what.html
docs/_build/html/contribute/: code.html  contributors.html  dev.html  doc.html  howto.html  index.html  release.html  service_providers.html  translate.html
docs/_build/html/install/: centos.html  debian.html  docker.html  download.html  index.html  installation.html  opensuse.html  prerequisites.html  windows.html
docs/_build/html/kernel/: configuration.html  dru.html  hpc.html  index.html  mapserver.html  orfeotoolbox.html  sagagis.html  what.html
docs/_build/html/services/: debug.html  howtos.html  index.html  process-profiles.html  status.html  translation.html  what.html  zcfg-reference.html  zoo-services.html
docs/install/: docker.rst  index.rst
testing/: README  new_run.sh  test_zoo.py  test_zoo_1.py  test_zoo_2.py  test_zoo_api.py
testing/requests/: dp.xml  execute_dynamic_input.xml  execute_irb_o_async.xml  execute_valid_async.xml
testing/requests/WPS 1.0/: dp.xml  execute_invalid_format.xml  execute_ir_or_async.xml  execute_irb_o.xml  execute_irb_o_async.xml  execute_irb_or.xml  execute_irb_or_async.xml  execute_missing_inputs.xml  execute_valid.xml  execute_valid_async.xml
testing/requests/WPS 2.0/: dp.xml  execute_irb_o.xml  execute_irb_or_async.xml
tests/: kernel_test.cpp
thirds/cgic206/: CMakeLists.txt
zoo-project/tests/: CMakeLists.txt  FindFCGI.cmake  loadLocalCfg.cpp  sqlapi_test.cpp
zoo-project/tests/cmake/: FindFCGI.cmake  FindJSONC.cmake
zoo-project/zoo-kernel/: CMakeLists.txt  service.c  service_internal.cpp  service_json.c  version.h
zoo-project/zoo-kernel/tests/: CMakeLists.txt
